--- a/src/style/General.css
+++ b/src/style/General.css
@@ -229,7 +229,7 @@ body {
 }
 
 #App.dark .Settings {
-    box-shadow: 0 -5px 5px hsl(0deg 0% 100% / 5%);
+    box-shadow: 0 -5px 5px hsl(0deg 0% 100% / 5%) !important;
 }
 
 .Settings.hidden {
@@ -361,17 +361,9 @@ input[type="checkbox"].checkbox+label::before {
 
 @media (max-width: 1350px) {
     .Settings {
-        display: block;
-        position: absolute;
         width: 180px;
-        height: auto;
         border-radius: 15px;
-        background: url("../patterns/brilliant.png"),
-            var(--color-mode-2);
-        box-shadow: 2px 2px 3px rgb(55 84 170 / 15%),
-            0px 0px 4px rgb(255 255 255 / 0%), 7px 7px 15px rgb(55 84 170 / 15%),
-            -7px -7px 20px rgb(0 0 0 / 10%), 0px 0px 4px rgb(255 255 255 / 20%) !important;
-        transition: 0.5s;
+        background: var(--color-mode-2);
     }
 
     .settings-title {
@@ -412,7 +404,7 @@ input[type="checkbox"].checkbox+label::before {
     }
 
     #cog-label {
-        position: fixed;
+        display: none;
     }
 
     .cog {
