--- a/src/style/News.css
+++ b/src/style/News.css
@@ -182,6 +182,7 @@
     display: flex;
     text-align: center;
     grid-area: Pagination;
+    filter: drop-shadow(0 0 1px var(--color-mode-contrast-2));
 }
 
 .news-row {
