--- a/src/style/News.css
+++ b/src/style/News.css
@@ -7,20 +7,20 @@
 
 .news-row[focus='right'] #news1 {
     max-width: 100%;
-    width: 100%;
+    width: 95%;
     flex: none;
 }
 
 .news-row[focus='left'] #news0 {
     max-width: 100%;
-    width: 100%;
+    width: 95%;
     flex: none;
 }
 
 .news-return {
     position: absolute;
     right: 2.5%;
-    top: 10px;
+    top: 2.5%;
     width: 60px;
     height: 60px;
     padding: 15px;
