--- a/src/style/News.css
+++ b/src/style/News.css
@@ -19,8 +19,9 @@
 
 .news-return {
     position: absolute;
-    right: 2.5%;
-    top: 2.5%;
+    right: 0;
+    top: 0;
+    margin: 2.5%;
     width: 60px;
     height: 60px;
     padding: 15px;
@@ -181,6 +182,7 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-top-right-radius: 10px;
+    position: relative;
 }
 
 #news-frame {
