--- a/src/style/News.css
+++ b/src/style/News.css
@@ -61,9 +61,6 @@
     box-shadow: 0 -5px 5px hsl(0deg 0% 100% / 5%);
 }
 
-#App.dark .add-news-button {
-    box-shadow: 0 -5px 5px rgba(255, 255, 255, 0.05);
-}
 
 .news-header.admin-view {
     justify-content: center;
@@ -195,13 +192,13 @@
 
 
 
-.add-news {
+/* .add-news {
     position: absolute;
     border-color: black;
     border: 2px solid;
     max-width: 20%;
     transition: left 0.3s ease, right 0.3s ease;
-}
+} */
 
 .form-button-valid {
     width: 50%;
