--- a/src/style/News.css
+++ b/src/style/News.css
@@ -190,6 +190,10 @@
     box-sizing: border-box;
 }
 
+trix-editor.trix-content {
+    max-height: 40vh;
+    overflow-y: auto;
+}
 
 
 /* .add-news {
