--- a/src/style/News.css
+++ b/src/style/News.css
@@ -37,7 +37,7 @@
 
 #news-filtres {
     position: relative;
-    flex: 0 0 5%;
+    flex: 0 0 10%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,7 +75,7 @@
 .news-header-title {
     margin: 0;
     align-items: center;
-    flex: 0 0 32%;
+    flex: 0 0 50%;
     margin-right: 1%;
     color: var(--color-mode-contrast-1);
     border-bottom: 0px;
@@ -124,7 +124,7 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    height: calc(100% - 40px);
+    height: calc(100% - 94px);
     background-color: #9ecd4399;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -157,8 +157,8 @@
 }
 
 .news-container {
+    height: calc(100vh - 50px);
     padding: 20px 0;
-    height: 100%;
     width: 100%;
 }
 
