--- a/src/style/News.css
+++ b/src/style/News.css
@@ -720,7 +720,11 @@ trix-editor.trix-content {
 
 @media (max-width: 1100px) {
     .news-row[focus=""] .news {
-        max-height: unset;
+        height: 50%;
+    }
+
+    .alert h5 {
+        font-size: 1em;
     }
 
     .news-row[focus=""] .news-textbox-block:after {
@@ -735,11 +739,9 @@ trix-editor.trix-content {
     .news-wrapper {
         display: block;
         overflow: auto;
-        margin-left: 7px;
-        margin-right: 7px;
     }
 
-    .news-row:not([focus="right"]):not([focus='center']):not([focus='left']) .news {
+    .news-row:not([focus="right"]):not([focus='left']) .news {
         width: 90%;
         margin: 0 auto 10px auto;
     }
