--- a/src/style/News.css
+++ b/src/style/News.css
@@ -653,10 +653,18 @@ trix-editor.trix-content {
 }
 
 @media (max-width: 780px) {
+    .news-wrapper {
+        display: block;
+    }
+
+    .news-title {
+        width: 80%;
+    }
 
     .news-row[focus="right"] .news-return,
     .news-row[focus="left"] .news-return {
         border: none;
+        background: none;
     }
 
     .news-row[focus="right"] .news-pagination,
@@ -671,6 +679,10 @@ trix-editor.trix-content {
 
     .news-container {
         padding-bottom: 0 !important;
+    }
+
+    .news-row[focus=""] .news {
+        height: 50%;
     }
 
     .news {
@@ -701,7 +713,7 @@ trix-editor.trix-content {
     }
 
     .alert-header {
-        display: none
+        display: none !important;
     }
 
     .news-block {
@@ -709,6 +721,7 @@ trix-editor.trix-content {
     }
 
     .news-alerts {
+        display: block !important;
         grid-area: Alertes;
     }
 
@@ -770,9 +783,12 @@ trix-editor.trix-content {
 }
 
 @media (max-width: 1100px) {
-    .news-row[focus=""] .news {
-        height: 50%;
+
+    .news-alerts {
+        display: none;
     }
+
+
 
     .alert h5 {
         font-size: 1em;
@@ -788,7 +804,6 @@ trix-editor.trix-content {
     }
 
     .news-wrapper {
-        display: block;
         overflow: auto;
     }
 }
