--- a/src/style/News.css
+++ b/src/style/News.css
@@ -203,11 +203,7 @@ trix-editor.trix-content {
     font-size: 1.5rem !important;
 }
 
-.news-visibility-button,
-.news-update-button,
-.news-del-button,
-.news-tagbox-button,
-.news-admin-button {
+#App button {
     position: relative !important;
     font-size: 1.25rem !important;
     width: max-content !important;
@@ -220,11 +216,7 @@ trix-editor.trix-content {
     margin: 0 !important;
 }
 
-.news-admin-button,
-.news-tagbox-button:focus,
-.news-visibility-button:focus,
-.news-update-button:focus,
-.news-del-button:focus {
+#App button:focus {
     outline: none !important;
 }
 
