--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -74,7 +74,7 @@
   --color-background-1: linear-gradient(to right top,
       #BBE9FF,
       #DDF4FF,
-      #EEFAFF,);
+      #EEFAFF);
   --color-background-2: #eeeeee;
   --color-mode-1: #eeeeee;
   --color-mode-2: #f6f9fc;
