--- a/src/style/News.css
+++ b/src/style/News.css
@@ -108,7 +108,6 @@
 }
 
 .news-pagination {
-    margin: 0 auto;
     justify-content: center;
     display: flex;
     text-align: center;
@@ -656,8 +655,12 @@ trix-editor.trix-content {
     transition: color 0.2s;
 }
 
+#App:not([isonsite]) .Settings:not(.hidden)+div .news-pagination {
+    width: calc(95% - 270px);
+}
+
 #App:not([isonsite]) .news-header {
-    width: calc(100% - 210px);
+    width: calc(95% - 270px);
 }
 
 #App:not([isonsite]) #news-frame {
@@ -670,7 +673,7 @@ trix-editor.trix-content {
 }
 
 #App:not([isonsite]) .searchbar {
-    flex: 0 0 27% !important;
+    flex: 0 0 39% !important;
 }
 
 #App:not([isonsite]) .Settings:not(.hidden)+div+#news-frame .news-wrapper {
@@ -690,6 +693,17 @@ trix-editor.trix-content {
         width: 80%;
     }
 
+    #App:not([isonsite]) .searchbar {
+        flex: 0 0 50% !important;
+    }
+
+    #App:not([isonsite]) .news-header {
+        width: 95%;
+    }
+
+    #App:not([isonsite]) .Settings:not(.hidden)+div .news-pagination {
+        width: 95%;
+    }
 
     .news-row[focus="right"] .news-pagination,
     .news-row[focus="left"] .news-pagination {
