--- a/src/style/News.css
+++ b/src/style/News.css
@@ -72,6 +72,18 @@
     border-color: var(--color-secondary) !important;
 }
 
+.page-item .page-link {
+    font-size: 0.80rem !important;
+    position: relative !important;
+    display: block !important;
+    padding: 0.5rem 0.75rem !important;
+    margin-left: 0.25rem !important;
+    line-height: 1.25 !important;
+    border: 1px solid #dee2e6 !important;
+    background-color: var(--color-mode-1) !important;
+    border-color: var(--color-mode-1) !important;
+}
+
 .close {
     font-size: 1.5rem !important;
 }
