--- a/src/style/News.css
+++ b/src/style/News.css
@@ -61,13 +61,6 @@
 }
 
 .page-item.active .page-link {
-    font-size: 0.80rem !important;
-    position: relative !important;
-    display: block !important;
-    padding: 0.5rem 0.75rem !important;
-    margin-left: 0.25rem !important;
-    line-height: 1.25 !important;
-    border: 1px solid #dee2e6 !important;
     background-color: var(--color-secondary) !important;
     border-color: var(--color-secondary) !important;
 }
@@ -80,9 +73,11 @@
     padding: 0.5rem 0.75rem !important;
     margin-left: 0.25rem !important;
     line-height: 1.25 !important;
-    border: 1px solid #dee2e6 !important;
+    border: 1px solid !important;
     background-color: var(--color-mode-1) !important;
     border-color: var(--color-mode-1) !important;
+    min-height: auto !important;
+    font-weight: normal !important;
 }
 
 .close {
