--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -14,6 +14,15 @@
     url("~@/assets/fonts/Petita/PetitaMedium.woff") format("woff");
 }
 
+/* MaterialDesignIcons.com */
+@font-face {
+  font-family: "Material Design Icons";
+  src: url("~@/assets/fonts/mdi/materialdesignicons-webfont.eot?v=7.0.96");
+  src: url("~@/assets/fonts/mdi/materialdesignicons-webfont.eot?#iefix&v=7.0.96") format("embedded-opentype"), url("~@/assets/fonts/mdi/materialdesignicons-webfont.woff2?v=7.0.96") format("woff2"), url("~@/assets/fonts/mdi/materialdesignicons-webfont.woff?v=7.0.96") format("woff"), url("~@/assets/fonts/mdi/materialdesignicons-webfont.ttf?v=7.0.96") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
   /** primary **/
   --color-primary-intra: #9FC737;
